Update EOD website
